tests/NormalTests/paczka1/fuzzy1/79316319.err
Error in line 3: JPo S448 64,9
Error in line 2: A656 S811 47,6
Error in line 24: TUKpiMIM S811 5,1
